--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -3,7 +3,31 @@
 @media screen and (max-width: 760px) {
     
     header {
-        display: flex;
         flex-direction: column;
+    }
+
+    main {
+        flex-direction: column;
+    }
+
+    h2 {
+        font-size: 38px;
+    }
+
+    form {
+        margin: 0 auto;
+    }
+
+    input {
+        align-self: center;
+    }
+
+    img {
+        width: 340px;
+        margin-top: 100px;
+    }
+
+    ul {
+        text-align: center;
     }
 }
